cloudformation/login-tool.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: LoginTool
Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: String
    Default: composer-team
  Stage:
    Description: Environment name
    Type: String
    AllowedValues:
    - PROD
    - CODE
  VpcId:
    Description: ID of the VPC onto which to launch the application eg. vpc-1234abcd
    Type: AWS::EC2::VPC::Id
    Default: vpc-381fa95d
  PublicVpcSubnets:
    Description: Subnets to use in VPC for public internet-facing ELB eg. subnet-abcd1234
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-c3620fa6,subnet-2b37bd5c,subnet-3667c86f
  PrivateVpcSubnets:
    Description: Subnets to use in VPC for private EC2 instances eg. subnet-abcd1234
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-c2620fa7,subnet-2a37bd5d,subnet-2967c870
  GuardianIP:
    Description: Ip range for the office
    Type: String
    Default: 77.91.248.0/21
  AMI:
    Description: Ip range for the office
    Type: String
  EmergencyAccessTableARN:
    Description: DynamoDB table arn which stores authorised users to enable emergency
      mode.
    Type: String
  S3BucketConfig:
    Description: S3 bucket where configuration lives e.g. switch values
    Type: String
  EmailFrom:
    Description: Address to send cookie reissue emails from
    Type: String
  ReissueTokensTablePrefix:
    Description: Code dynamo table
    Type: String
    Default: login.gutools-tokens
Mappings:
  SSLCertificateId:
    Environment:
      CODE: arn:aws:iam::743583969668:server-certificate/star.code.dev-gutools.co.uk-exp2018-02-15
      PROD: arn:aws:iam::743583969668:server-certificate/star.gutools.co.uk-exp2018-11-17
  EnvironmentMap:
    CODE:
      lowercase: code
      desiredCapacity: 3
      maxSize: 6
    PROD:
      lowercase: prod
      desiredCapacity: 3
      maxSize: 6
  DynamoConfigTablesMap:
    CODE:
      name: LoginToolCODE_
    PROD:
      name: LoginToolPROD_
Resources:
  LoginToolRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
  PanDomainPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: PanDomainPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - s3:GetObject
          Resource:
          - arn:aws:s3:::pan-domain-auth-settings/*
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolDescribeEC2Policy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolDescribeEC2Policy
      PolicyDocument:
        Statement:
        - Action:
          - EC2:Describe*
          Effect: Allow
          Resource: '*'
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolGetDistributablesPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolGetDistributablesPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - s3:GetObject
          Resource:
          - arn:aws:s3:::composer-dist/*
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolCloudwatchPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolCloudwatchPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - cloudwatch:*
          Resource: '*'
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolS3ConfigPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolS3ConfigPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - s3:GetObject
          - s3:PutObject
          Resource:
          - !Sub 'arn:aws:s3:::${S3BucketConfig}/${Stage}/*'
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolDynamoEmergencyAccessPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolDynamoEmergencyAccessPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - dynamodb:GetItem
          Resource:
          - !Ref 'EmergencyAccessTableARN'
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolDynamoTokensAccessPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolDynamoTokensAccessPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - dynamodb:GetItem
          - dynamodb:PutItem
          Resource:
          - !Sub ['arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${Param1}',
            {Param1: !Join ['-', [!Ref 'ReissueTokensTablePrefix', !Ref 'Stage']]}]
      Roles:
      - !Ref 'LoginToolRole'
  LoginToolSendMailPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoginToolSendMailPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - ses:SendEmail
          Resource: '*'
          Condition:
            StringEquals:
              ses:FromAddress: !Ref 'EmailFrom'
      Roles:
      - !Ref 'LoginToolRole'
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from the office
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 10.0.0.0/0
  PingSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow pinging of the instance
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: icmp
        FromPort: '8'
        ToPort: '-1'
        CidrIp: 10.0.0.0/0
  AppServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: application servers
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 9000
        ToPort: 9000
        CidrIp: 10.0.0.0/0
      - IpProtocol: tcp
        FromPort: 9000
        ToPort: 9000
        SourceSecurityGroupId: !Ref 'LoadBalancerSecurityGroup'
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: load balancer
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
  LoginToolLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      SecurityGroups:
      - !GetAtt 'LoadBalancerSecurityGroup.GroupId'
      CrossZone: true
      Subnets: !Ref 'PublicVpcSubnets'
      Listeners:
      - LoadBalancerPort: '443'
        InstancePort: '9000'
        Protocol: HTTPS
        SSLCertificateId: !FindInMap [SSLCertificateId, Environment, !Ref 'Stage']
      HealthCheck:
        Target: HTTP:9000/_healthcheck
        HealthyThreshold: '2'
        UnhealthyThreshold: '2'
        Interval: '10'
        Timeout: '5'
      Tags:
      - Key: Stage
        Value: !Ref 'Stage'
      - Key: Stack
        Value: flexible
      - Key: App
        Value: login
  AutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs ''
      VPCZoneIdentifier: !Ref 'PrivateVpcSubnets'
      LaunchConfigurationName: !Ref 'LoginToolLaunchConfig'
      MinSize: !FindInMap [EnvironmentMap, !Ref 'Stage', desiredCapacity]
      MaxSize: !FindInMap [EnvironmentMap, !Ref 'Stage', maxSize]
      DesiredCapacity: !FindInMap [EnvironmentMap, !Ref 'Stage', desiredCapacity]
      HealthCheckType: ELB
      HealthCheckGracePeriod: 900
      LoadBalancerNames:
      - !Ref 'LoginToolLoadBalancer'
      Tags:
      - Key: Stage
        Value: !Ref 'Stage'
        PropagateAtLaunch: 'true'
      - Key: Stack
        Value: flexible
        PropagateAtLaunch: 'true'
      - Key: App
        Value: login
        PropagateAtLaunch: 'true'
  LoginToolLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: !Ref 'KeyName'
      ImageId: !Ref 'AMI'
      SecurityGroups:
      - !Ref 'AppServerSecurityGroup'
      - !Ref 'SSHSecurityGroup'
      - !Ref 'PingSecurityGroup'
      InstanceType: t2.micro
      IamInstanceProfile: !Ref 'LoginToolInstanceProfile'
      UserData: !Base64
        '#!/bin/bash -ev
        /opt/features/native-packager/install.sh -b composer-dist -t tgz -a login -s '
  LoginTokens:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Sub '${ReissueTokensTablePrefix}-${Stage}'
      AttributeDefinitions:
      - AttributeName: id
        AttributeType: S
      KeySchema:
      - AttributeName: id
        KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: '5'
        WriteCapacityUnits: '5'
